--- a/index.html
+++ b/index.html
@@ -13,16 +13,26 @@
     <div id="dashboard" class="max-w-5xl mx-auto p-4 space-y-6">
       <h1 class="text-2xl font-bold">Perfil de actividad</h1>
 
-      <div id="topCards" class="grid grid-cols-2 md:grid-cols-4 gap-4"></div>
+      <div class="md:grid md:grid-cols-5 gap-4">
+        <aside id="sidebar" class="md:col-span-1 mb-4 md:mb-0">
+          <nav class="bg-white rounded shadow overflow-hidden">
+            <button data-section="general" class="w-full text-left px-4 py-2 hover:bg-gray-100">General</button>
+            <button data-section="by-direction" class="w-full text-left px-4 py-2 hover:bg-gray-100">Por dirección</button>
+            <button data-section="by-type" class="w-full text-left px-4 py-2 hover:bg-gray-100">Por tipo</button>
+          </nav>
+        </aside>
+        <div id="content" class="md:col-span-4 space-y-6">
 
-      <div class="bg-white p-4 rounded shadow">
+      <div id="topCards" class="grid grid-cols-2 md:grid-cols-4 gap-4 sec-general"></div>
+
+      <div class="bg-white p-4 rounded shadow sec-general">
         <h3 class="text-lg font-semibold mb-4">Escala robusta</h3>
         <div class="h-24">
           <canvas id="robustBullet"></canvas>
         </div>
       </div>
 
-      <div class="grid md:grid-cols-2 gap-4">
+      <div class="grid md:grid-cols-2 gap-4 sec-general">
         <div>
           <h3 class="text-lg font-semibold mb-2">Histograma horario</h3>
           <canvas id="hourChart" class="bg-white p-2 rounded" height="200"></canvas>
@@ -33,7 +43,7 @@
         </div>
       </div>
 
-      <div>
+      <div class="sec-general">
         <h3 class="text-lg font-semibold mb-2">Recencia</h3>
         <div
           id="recencyBullet"
@@ -41,7 +51,7 @@
         ></div>
       </div>
 
-      <div class="grid md:grid-cols-3 gap-4">
+      <div class="grid md:grid-cols-3 gap-4 sec-general">
         <div>
           <h3 class="text-lg font-semibold mb-2">Frecuencia por tipo</h3>
           <canvas id="typeFreqDonut" class="bg-white p-2 rounded w-full" height="200"></canvas>
@@ -56,7 +66,7 @@
         </div>
       </div>
 
-      <div class="grid md:grid-cols-2 gap-4">
+      <div class="grid md:grid-cols-2 gap-4 sec-by-direction hidden">
         <div>
           <h3 class="text-lg font-semibold mb-2">Por dirección: Operaciones</h3>
           <canvas id="byDirCount" class="bg-white p-2 rounded" height="200"></canvas>
@@ -67,7 +77,7 @@
         </div>
       </div>
 
-      <div class="grid md:grid-cols-2 gap-4">
+      <div class="grid md:grid-cols-2 gap-4 sec-by-type hidden">
         <div>
           <h3 class="text-lg font-semibold mb-2">Por tipo: Operaciones</h3>
           <canvas id="byTypeCount" class="bg-white p-2 rounded" height="240"></canvas>
@@ -78,7 +88,9 @@
         </div>
       </div>
 
-    <div id="otherCards" class="grid md:grid-cols-3 gap-4"></div>
+    <div id="otherCards" class="grid md:grid-cols-3 gap-4 sec-general"></div>
+        </div>
+      </div>
     </div>
     <footer class="max-w-5xl mx-auto p-4">
       <details class="bg-gray-900 text-gray-100 rounded">
@@ -1000,6 +1012,37 @@
       if (rawPre) {
         rawPre.innerHTML = syntaxHighlight(rawData);
       }
+
+      // Sidebar section switching
+      const SECTION_SELECTORS = {
+        general: '.sec-general',
+        'by-direction': '.sec-by-direction',
+        'by-type': '.sec-by-type',
+      };
+      function showSection(key) {
+        const all = '.sec-general,.sec-by-direction,.sec-by-type';
+        document.querySelectorAll(all).forEach((el) => el.classList.add('hidden'));
+        const sel = SECTION_SELECTORS[key] || SECTION_SELECTORS.general;
+        document.querySelectorAll(sel).forEach((el) => el.classList.remove('hidden'));
+        // button active state
+        document.querySelectorAll('#sidebar [data-section]').forEach((btn) => {
+          btn.classList.remove('bg-gray-200', 'text-gray-900');
+        });
+        const active = document.querySelector(`#sidebar [data-section="${key}"]`);
+        if (active) active.classList.add('bg-gray-200', 'text-gray-900');
+        // resize charts after toggling visibility
+        try { window.dispatchEvent(new Event('resize')); } catch (e) {}
+        if (key === 'general' && window.Plotly && document.getElementById('recencyBullet')) {
+          try { Plotly.Plots.resize('recencyBullet'); } catch (e) {}
+        }
+      }
+      function setupSidebar() {
+        document.querySelectorAll('#sidebar [data-section]').forEach((btn) => {
+          btn.addEventListener('click', () => showSection(btn.dataset.section));
+        });
+        showSection('general');
+      }
+      setupSidebar();
     </script>
   </body>
 </html>
